app/javascript/style/video/_canvas.scss
@use "../utils/breakpoints" as *;

#video-show {
  .primary-video-area {
    // This is required to ensure that the controls can be shown over this area
    position: relative;
  }

  canvas.primary-canvas {
    width: 100%;
    border-radius: 0 0 10px 10px;
  }

  canvas.fixed-secondary-canvas {
    border-radius: 10px 10px 0 0;
    max-width: 20vw;
  }

  canvas.pip-secondary-canvas {
    border-radius: 10px;
  }
}

